# FSAproject

fastapi/: pyproject.toml
fastapiproject/: pyproject.toml
fastapiproject/fastapiproject/: main.py
fastapiproject/fastapiproject/datab/: config.py  models.py
fastapiproject/fastapiproject/models/: user_model.py
fastapiproject/migrations/: env.py
fastapiproject/migrations/versions/: d44fa42d49a9_database_creation.py
