[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Симонов Алексей <alxxalxx@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.27.1"
fastapi = "^0.109.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
